--- a/app/templates/app/addtocart.html
+++ b/app/templates/app/addtocart.html
@@ -48,7 +48,7 @@
                 <div class="card-body">
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                            Amount <span id="amount">$ {{amount}}</span>
+                            Amount <b>$<span id="amount">{{amount}}</span></b>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                             Shipping <span> Free <i class="bi bi-emoji-wink-fill"></i></span>
@@ -57,11 +57,7 @@
                             <div>
                                 <strong>Total</strong> <small>(including GST)</small>
                             </div>
-                            <span id="totalamount">
-                                <strong>
-                                    $ {{totalamount}}
-                                </strong>
-                            </span>
+                            <b>$.<span id="totalamount"><strong>{{totalamount}}</strong></span></b>
                         </li>
                     </ul>
                     <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-success">Place Order</a></div>
