--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -35,7 +35,7 @@
           <button title="search-btn" class="btn text-danger p-2 search-butn" type="submit"><i class="bi bi-search"></i></button>
         </form>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item mx-2"><a href="{% url 'show-cart' %}" class="btn nav-link">Cart <i class="bi bi-cart4"></i></a></li>
+          <li class="nav-item mx-2"><a href="{% url 'show-cart' %}" class="btn nav-link">Cart<i class="bi bi-cart4"></i><span class="badge bg-primary">{% if totalitem > 0 %} {{totalitem}} {% endif %}</span></a></li>
           <li class="nav-item mx-2"><a href="#" class="btn nav-link">Wishlist 4</a></li>
           {% if user.is_authenticated %}
           <li class="nav-item dropdown mx-2">
@@ -45,7 +45,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-start" aria-labelledby="profileDropdown">
               <li><a href="{% url 'profile' %}" class="btn dropdown-item">Profile</a></li>
-              <li><a href="#" class="btn dropdown-item">Orders</a></li>
+              <li><a href="{% url 'orders' %}" class="btn dropdown-item">Orders</a></li>
               <li><a href="{% url 'password-change' %}" class="btn dropdown-item">Change Password</a></li>
               <li><a href="{% url 'logout' %}" class="btn dropdown-item">Logout</a></li>
             </ul>
